Fri Aug 24 18:42:03 2007  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* test/ruby/test_dir.rb (TestDir::setup): ?c now makes a string.

	* lib/test/unit/autorunner.rb (Test::Unit::AutoRunner::initialize):
	  initialize @workdir to stop warning.

Fri Aug 24 18:30:50 2007  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* lib/drb/drb.rb (DRb::DRbServer::InvokeMethod::perform_without_block): 
	  replace funcall by send!.  other files in the distribution as well.

Fri Aug 24 17:06:56 2007  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (rb_f_send_bang): abandon the name funcall for private
	  aware method call.

Fri Aug 24 15:27:12 2007  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* enumerator.c (enumerator_next): stop pre-fetching.

	* enumerator.c (Init_Enumerator): remove next? method.

Fri Aug 24 15:14:57 2007  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (rb_f_loop): now handles StopIteration exception.

Thu Aug 23 20:31:31 2007  Koichi Sasada  <ko1@atdot.net>

	* compile.c: optimize simple massign.

Thu Aug 23 20:02:25 2007  Masaki Suketa  <masaki.suketa@nifty.ne.jp>

	* ext/win32ole/win32ole.c (reg_get_value): use RegQueryValueEx instead
	  of RegQueryValueEx.

	* ext/win32ole/win32ole.c (typelib_file_from_clsid): fix the bug
	  that the function always returns Qnil.

	* test/win32ole/test_win32ole_type.rb (test_initialize): add some test.

Thu Aug 23 17:25:05 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (group_member): check if presents.

	* configure.in (XCFLAGS): add _GNU_SOURCE on linux.

	* file.c (group_member): use system routine if available.

	* process.c: moved _GNU_SOURCE macro to Makefile.

Thu Aug 23 16:59:40 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* compile.c (compile_massign), insnhelper.ci (vm_throw): not use C99
	  comment.

	* cont.c (rb_cont_call, fiber_switch, rb_fiber_resume, rb_fiber_yield):
	  suppress warnings.

	* cont.c (rb_fiber_start): change on non-volatile variable between