@@ -4,6 +4,14 @@ assert_equal '[[1], 2, 3]', '*v1,(*), (a, b) = [1,:x,[2, 3]]; [v1, a, b]'
 assert_equal '[]',          '*a = *nil; a'
 assert_equal '[nil]',       '*a = nil; a'
 assert_equal '2',           'a, a = 1, 2; a', "[ruby-dev:31522]"
+assert_equal '[1, 2]',      'a, b = 1, 2'
+assert_equal '[1, 2]', %q{
+  ans = []
+  trace_var(:$a){|v| ans << v}
+  trace_var(:$b){|v| ans << v}
+  $a, $b = 1, 2
+  ans
+}
 
 =begin
 # generated by this script:
